--- a/about.html
+++ b/about.html
@@ -19,12 +19,6 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="icon" href="./img/ikasi_logo.png" type="image/x-icon">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 <body>
 <div id="main-wrapper">
@@ -63,50 +57,49 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="Blog.html">News</a></li>
-                <li class="dropdown m-menu-fw"><a href="#" data-toggle="dropdown"
-                    class="dropdown-toggle">Vendors
+                <li class="dropdown m-menu-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Vendors
                     <span><i class="fa fa-angle-down"></i></span></a>
-                <ul class="dropdown-menu">
-                    <li>
-                        <div class="m-menu-content">
-                            <ul class="col-sm-3">
-                                <li class="dropdown-header">Communication</li>
-                                <li><a class="popup-link" data-video-id="idHPbgMpdKo" href="#">Dell technologies</a></li>
-                                <li><a class="popup-link" data-video-id="Wporyr3hr68" href="#">Hewlett Packard Enterprise</a></li>
-                                <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
-                                <li><a class="popup-link" data-video-id="A1qKp5bsGmo" href="#">NetSheild</a></li>
-                                <li><a class="popup-link" data-video-id="iV0CwoCJBno" href="#">Huawei</a></li>
-                            </ul>
-                            <ul class="col-sm-3">
-                                <li class="dropdown-header">Cloud</li>
-                                <li><a class="popup-link" data-video-id="4kuznHDHb5o" href="#">SYNAQ</a></li>
-                                <li><a class="popup-link" data-video-id="b7ZC01afWPw" href="#">Adobe</a></li>
-                                <li><a class="popup-link" data-video-id="2W0T2qGZ9Dc" href="#">Microsoft Office 365</a></li>
-                                <li><a class="popup-link" data-video-id="UdQQNiQUzbE" href="#">Huawei</a></li>
-                            </ul>
-                            <ul class="col-sm-3">
-                                <li class="dropdown-header">Security</li>
-                                <li><a href="./Products/Kaspersky.html">Kaspersky</a></li>
-                                <li><a href="./Products/Sophos.html">Sophos</a></li>
-                                <li><a class="popup-link" data-video-id="O74W9BB0gGI" href="#">CheckPoint</a></li>
-                                <li><a href="./Products/veeam.html">Veeam</a></li>
-                                <li><a class="popup-link" data-video-id="l47aHiyRXqI" href="#">Huawei</a></li>
-                            </ul>
-                            <ul class="col-sm-3">
-                                <li class="dropdown-header">Networking</li>
-                                <li><a href="./Products/Sophos.html">Sophos</a></li>
-                                <li><a class="popup-link" data-video-id="bHOpHg4WwTMK" href="#">Cisco</a></li>
-                                <li><a class="popup-link" data-video-id="A1qKp5bsGmo" href="#">NetSheild</a></li>
-                                <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
-                                <li><a class="popup-link" data-video-id="iV0CwoCJBno" href="#">Huawei</a></li>
-                                <li><a class="popup-link" data-video-id="MnAl5acI2Nk" href="#">Veeam</a></li>
-                                <li><a class="popup-link" data-video-id="hpHkLLmkD_o" href="#">Manage Engine</a></li>
-                                <li><a class="popup-link" data-video-id="Wporyr3hr68" href="#">Hewlett Packard Enterprise</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </li>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <div class="m-menu-content">
+                                <ul class="col-sm-3">
+                                    <li class="dropdown-header">Communication</li>
+                                    <li><a class="popup-link" data-video-id="idHPbgMpdKo" href="#">Dell technologies</a></li>
+                                    <li><a class="popup-link" data-video-id="Wporyr3hr68" href="#">Hewlett Packard Enterprise</a></li>
+                                    <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
+                                    <li><a class="popup-link" data-video-id="A1qKp5bsGmo" href="#">NetSheild</a></li>
+                                    <li><a class="popup-link" data-video-id="iV0CwoCJBno" href="#">Huawei</a></li>
+                                </ul>
+                                <ul class="col-sm-3">
+                                    <li class="dropdown-header">Cloud</li>
+                                    <li><a class="popup-link" data-video-id="4kuznHDHb5o" href="#">SYNAQ</a></li>
+                                    <li><a class="popup-link" data-video-id="b7ZC01afWPw" href="#">Adobe</a></li>
+                                    <li><a class="popup-link" data-video-id="2W0T2qGZ9Dc" href="#">Microsoft Office 365</a></li>
+                                    <li><a class="popup-link" data-video-id="UdQQNiQUzbE" href="#">Huawei</a></li>
+                                </ul>
+                                <ul class="col-sm-3">
+                                    <li class="dropdown-header">Security</li>
+                                    <li><a href="./Products/Kaspersky.html">Kaspersky</a></li>
+                                    <li><a href="./Products/Sophos.html">Sophos</a></li>
+                                    <li><a class="popup-link" data-video-id="O74W9BB0gGI" href="#">CheckPoint</a></li>
+                                    <li><a href="./Products/veeam.html">Veeam</a></li>
+                                    <li><a class="popup-link" data-video-id="l47aHiyRXqI" href="#">Huawei</a></li>
+                                </ul>
+                                <ul class="col-sm-3">
+                                    <li class="dropdown-header">Networking</li>
+                                    <li><a href="./Products/Sophos.html">Sophos</a></li>
+                                    <li><a class="popup-link" data-video-id="bHOpHg4WwTMK" href="#">Cisco</a></li>
+                                    <li><a class="popup-link" data-video-id="A1qKp5bsGmo" href="#">NetSheild</a></li>
+                                    <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
+                                    <li><a class="popup-link" data-video-id="iV0CwoCJBno" href="#">Huawei</a></li>
+                                    <li><a class="popup-link" data-video-id="MnAl5acI2Nk" href="#">Veeam</a></li>
+                                    <li><a class="popup-link" data-video-id="hpHkLLmkD_o" href="#">Manage Engine</a></li>
+                                    <li><a class="popup-link" data-video-id="Wporyr3hr68" href="#">Hewlett Packard Enterprise</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </li>
             </ul>
 
         </div>
@@ -266,11 +259,11 @@
    </section>
 -->
 
-<div class="popup-overlay1" id="popup-overlay1">
-    <div class="popup-content1">
-      <span class="close-btn1" id="close-btn1">&times;</span>
+<div class="popup-overlay" id="popup-overlay">
+    <div class="popup-content">
+      <span class="close-btn" id="close-btn">&times;</span>
       <!-- Embedded YouTube video -->
-      <iframe id="w-video" src="" frameborder="0" allowfullscreen></iframe>
+      <iframe title="YouTube Video Information" id="w-video" src="" frameborder="0" allowfullscreen></iframe>
     </div>
 </div>
 
@@ -350,8 +343,7 @@
     <div class="copyright-section">
         <div class="container clearfix">
             <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
-                rel="noopener" target="_blank" href="https://zukamime03.github.io">ZUKAMIME </a>and<a href="#" rel="noopener" target="_blank"> CRYPTO</a></span>
-
+                rel="noopener" target="_blank" href="https://zukamime03.github.io">LAMPROS Developments</span>
             <ul class="list-inline pull-right">
                 <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="about.html">About</a></li>
@@ -417,5 +409,13 @@
 <script src="js/mobile-menu.js"></script>
 <script src="js/flexSlider/jquery.flexslider-min.js"></script>
 <script src="js/scripts.js"></script>
+<script src="js/popup.js"></script>
+
+ <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+
 </body>
 </html>
