--- a/Products/Kaspersky.html
+++ b/Products/Kaspersky.html
@@ -828,5 +828,6 @@
     <script src="../js/mobile-menu.js"></script>
     <script src="../js/flexSlider/jquery.flexslider-min.js"></script>
     <script src="../js/scripts.js"></script>
+    <script src="../js/popup.js"></script>
   </body>
 </html>
