--- a/Products/veeam.html
+++ b/Products/veeam.html
@@ -120,7 +120,7 @@
     <section class="about-text ptb-100">
         <section class="section-title">
             <div class="veeam-page">
-                <iframe src="https://wcs-veeamproducts-ikasisolutions.swcontentsyndication.com/VeeamProduct-Homepage-EN" style="height: 2500px; width: 100%; border: none;"></iframe>   
+                <iframe title = "Ikasisolutions Veeam Syndication page" src="https://wcs-veeamproducts-ikasisolutions.swcontentsyndication.com/VeeamProduct-Homepage-EN" style="height: 2500px; width: 100%; border: none;"></iframe>   
             </div>   
         </section>
     </section>
@@ -129,7 +129,7 @@
       <div class="popup-content">
         <span class="close-btn" id="close-btn">&times;</span>
         <!-- Embedded YouTube video -->
-        <iframe id="w-video" src="" frameborder="0" allowfullscreen></iframe>
+        <iframe title="Youtube video loader" id="w-video" src="" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
     
@@ -244,5 +244,6 @@
 <script src="../js/mobile-menu.js"></script>
 <script src="../js/flexSlider/jquery.flexslider-min.js"></script>
 <script src="../js/scripts.js"></script>
+<script src="../js/popup.js"></script>
 </body>
 </html>
