--- a/Upgrades.html
+++ b/Upgrades.html
@@ -42,5 +42,6 @@
 <script src="../js/mobile-menu.js"></script>
 <script src="../js/flexSlider/jquery.flexslider-min.js"></script>
 <script src="../js/scripts.js"></script>
+<script src="js/popup.js"></script>
 </body>
 </html>
