--- a/blog.html
+++ b/blog.html
@@ -19,12 +19,6 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="icon" href="./img/ikasi_logo.png" type="image/x-icon">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 <body>
 <div id="main-wrapper">
@@ -220,8 +214,7 @@
     <div class="copyright-section">
         <div class="container clearfix">
             <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
-                rel="noopener" target="_blank" href="https://zukamime03.github.io">ZUKAMIME </a></span>
-
+                rel="noopener" target="_blank" href="https://zukamime03.github.io">LAMPROS Developments</span>
             <ul class="list-inline pull-right">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
@@ -288,5 +281,13 @@
 <script src="js/mobile-menu.js"></script>
 <script src="js/flexSlider/jquery.flexslider-min.js"></script>
 <script src="js/scripts.js"></script>
+<script src="js/popup.js"></script>
+ 
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  
 </body>
 </html>
