--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
     <script src="js/mobile-menu.js"></script>
     <script src="js/flexSlider/jquery.flexslider-min.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/popup.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
       <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
