--- a/services.html
+++ b/services.html
@@ -538,9 +538,8 @@
 
             <div class="copyright-section">
               <div class="container clearfix">
-                  <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
-                      rel="noopener" target="_blank" href="https://zukamime03.github.io">ZUKAMIME </a>and<a href="#" rel="noopener" target="_blank"> CRYPTO</a></span>
-
+                <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
+                  rel="noopener" target="_blank" href="https://zukamime03.github.io">LAMPROS Developments</span>
                   <ul class="list-inline pull-right">
                       <li><a href="./index.html">Home</a></li>
                       <li><a href="./about.html">About</a></li>
@@ -615,5 +614,12 @@
     <script src="js/mobile-menu.js"></script>
     <script src="js/flexSlider/jquery.flexslider-min.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/popup.js"></script>
+
+     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    
   </body>
 </html>
