--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img style="height: 720px ;width: 100%; filter: brightness(30%);" src="img/network.jpg" alt="Networking Banner"
+                            <img src="img/network.jpg" alt="Networking Banner"
                             class="Ikasi-network-banner">
 
                             <div class="carousel-caption">
