--- a/services.html
+++ b/services.html
@@ -142,7 +142,7 @@
           <section class="service-icon-style ptb-100">
             <section class="section-title">
               <div class="container text-center">
-                <h1>
+                <h1 class="service-line">
                   Fortifying your digital fortress with layers of impenetrable
                   security.<br />
                 </h1>
