--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                    
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
-                        <div class="item active">
+                        <div class="banner active">
                             <img src="img/network.jpg" alt="Networking Banner"
                             class="Ikasi-network-banner">
 
