--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
         <div style="margin-left: 15%;" class="row">
             <div class="col-md-6 img-left">
                 <img style="height: 30%; width: 60%;" class="img-responsive"
-                    src="./img/sophos-synchro.jpg" alt="Sophos Synchro Award">
+                    src="./img/Sophos-synchro-award.jpg" alt="Sophos Synchro Award">
                 <div class="promo-content">
                     <h3><br>SOPHOS Synchronisation Award</h3>
                     <p>Awarded by SOPHOS For Synchronized Security Partner Of the year, 2024.</p>
@@ -160,7 +160,7 @@
             </div>
 
             <div class="col-md-6 img-left">
-                <img style="height: 30%; width: 60%;" class="img-responsive" src="./img/sophos-edu.jpg"
+                <img style="height: 30%; width: 60%;" class="img-responsive" src="./img/Sophos-edu-award.jpg"
                     alt="Sophos Education Award">
                 <div class="promo-content">
                     <h3><br>SOPHOS Education Award</h3>
