--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <hr>
                 </div>
 
-                <!--Testimonial start-->
+                <!--Banner gallery-->
                 <div class="gallery-container">
                     <div class="gallery">
                         <img src="./img/Kaspersky-banner.png" alt="Image 1">
@@ -260,7 +260,7 @@
                     <button class="prev" onclick="prevSlide()">&#10094;</button>
                     <button class="next" onclick="nextSlide()">&#10095;</button>
                 </div>
-                <!-- .testimonial end-->
+                <!-- .gallery end-->
 
                 <div style="margin: 20px;" class="white-space">
                     <h1><br></h1>
