--- a/Blog.html
+++ b/Blog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ikasi Solution | About</title>
+    <title>Ikasi Solution | News</title>
     <!-- web-fonts -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -123,8 +123,7 @@
             <h2 class="news-title" style="padding: 50px;text-align: center;">NEWS FROM SOPHOS</h2>
         </div>
         <div class="news-section">
-         <!--   <iframe style="height: 1300px;" title="News From Sophos" class="Sophos-news" src="https://partnerportal.sophos.com/en-us/microsite/newssync/full-page.aspx?partner_referral_id=0013000001A8cMK&partner_name=IKASI+SOLUTIONS+CC" width="1000" height="1150" style="border: none;" ></iframe>
-        -->
+         <iframe style="height: 1300px;" title="News From Sophos" class="Sophos-news" src="https://partnerportal.sophos.com/en-us/microsite/newssync/full-page.aspx?partner_referral_id=0013000001A8cMK&partner_name=IKASI+SOLUTIONS+CC" width="1000" height="1150" style="border: none;" ></iframe>
         </div>
     </section>
 
